crates/test-files/fixtures/compile_errors/invalid_tx_field.fe
contract Foo {
    pub fn foo() {
        tx.foo
    }
}
